tests/ui/fail/multiple_skip_remaining.stderr
error: Multiple #[skip_remaining] attributes in "Named"
  --> tests/ui/fail/multiple_skip_remaining.rs:15:5
   |
15 |     #[skip_remaining]
   |     ^^^^^^^^^^^^^^^^^

error: Multiple #[skip_remaining] attributes in "Unnamed"
  --> tests/ui/fail/multiple_skip_remaining.rs:23:5
   |
23 |     #[skip_remaining]
   |     ^^^^^^^^^^^^^^^^^
